[1] add logo, [2] format man pages

--- a/LAB2/tsh.1
+++ b/LAB2/tsh.1
@@ -18,6 +18,12 @@ prints version information to standard output, then exits.
 .B tsh accepts the standard commands used in UNIX shel.
 .SS Readline
 .B uncomment READLINEFLAG in config.mk for using GNU Readline for shell input.
+.SS [Placeholder]
+.B [Placeholder text]
+.SS [Placeholder]
+.B [Placeholder text]
+.SS [Placeholder]
+.B [Placeholder text]
 .SH CUSTOMIZATION
 tsh is customized by creating a custom config.h and (re)compiling the source code.
 .SH SEE ALSO
